database.yml: also rank LLVM for users
Developers are users too.

--- a/database.yml
+++ b/database.yml
@@ -117,6 +117,7 @@ Sections:
       - security:
         - build
         - runtime
+        - user
       - depends:
         - libcxxrt
         - ncurses
