--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,lyaml,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,bsnmp,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,lyaml,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -24,6 +24,10 @@ sources=bmake.c
 type=binary
 cflags=-isystem /usr/include/private/bsddialog
 sources=bsddialog.c
+
+[bsnmp]
+type=binary
+sources=bsnmp.c
 
 [byacc]
 type=binary
@@ -220,6 +224,9 @@ depends=common.c
 depends=common.c
 
 [bsddialog.c]
+depends=common.c
+
+[bsnmp.c]
 depends=common.c
 
 [byacc.c]
