src/versions: add libexpat

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,bsnmp,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,lyaml,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,bsnmp,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,libexpat,liblzma,libpcap,libxo,llvm,lua,lyaml,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -107,6 +107,10 @@ type=binary
 cflags=-isystem /usr/include/private/event1
 ldflags=-lprivateevent1
 sources=libevent.c
+
+[libexpat]
+type=binary
+sources=libexpat.c
 
 [liblzma]
 type=binary
@@ -281,6 +285,9 @@ depends=common.c
 depends=common.c
 
 [libevent.c]
+depends=common.c
+
+[libexpat.c]
 depends=common.c
 
 [liblzma.c]
