aobc-generate: rename to aobc-tool
While there, introduce a new "blame" command, returning the owner(s) for
a part of the code.

--- a/project.conf
+++ b/project.conf
@@ -13,12 +13,12 @@ install=$(PREFIX)/share/doc/$(PACKAGE)
 #targets
 [dependencies.md]
 type=command
-command=$(OBJDIR)src/aobc-generate
-depends=$(OBJDIR)src/aobc-generate,database.yml
+command=$(OBJDIR)src/aobc-tool generate
+depends=$(OBJDIR)src/aobc-tool,database.yml
 
 [format]
 type=command
-command=go fmt src/cmd/aobc-generate/aobc-generate.go
+command=go fmt src/cmd/aobc-tool/aobc-tool.go
 phony=1
 enabled=0
 
@@ -31,13 +31,13 @@ enabled=0
 
 [plan.md]
 type=command
-command=$(OBJDIR)src/aobc-generate
-depends=$(OBJDIR)src/aobc-generate,database.yml
+command=$(OBJDIR)src/aobc-tool generate
+depends=$(OBJDIR)src/aobc-tool,database.yml
 
 [security.md]
 type=command
-command=$(OBJDIR)src/aobc-generate
-depends=$(OBJDIR)src/aobc-generate,database.yml
+command=$(OBJDIR)src/aobc-tool generate
+depends=$(OBJDIR)src/aobc-tool,database.yml
 
 [spdx]
 depends=dependencies.md,security.md,tools/spdx.sh
