--- a/src/project.conf
+++ b/src/project.conf
@@ -1,8 +1,8 @@
 subdirs=versions
-targets=aobc-generate
+targets=aobc-tool
 dist=Makefile,go.mod,go.sum
 
 #targets
-[aobc-generate]
+[aobc-tool]
 type=binary
-sources=cmd/aobc-generate/aobc-generate.go
+sources=cmd/aobc-tool/aobc-tool.go
