aobc-tool: allow generating specific reports

--- a/project.conf
+++ b/project.conf
@@ -2,7 +2,7 @@ vendor=FreeBSD-Foundation
 package=alpha-omega-beach-cleaning
 version=20250922
 
-targets=dependencies.md,format,merge-versions,plan.md,security.md,spdx,versions.yml
+targets=dependencies.md,format,merge-versions,pkgconfig,plan.md,security.md,spdx,versions.yml
 subdirs=src
 dist=COPYING,Makefile,README.md,database.yml,tools/spdx.sh
 
@@ -13,7 +13,7 @@ install=$(PREFIX)/share/doc/$(PACKAGE)
 #targets
 [dependencies.md]
 type=command
-command=$(OBJDIR)src/aobc-tool generate
+command=$(OBJDIR)src/aobc-tool generate dependencies
 depends=$(OBJDIR)src/aobc-tool,database.yml
 
 [format]
@@ -29,18 +29,25 @@ depends=versions.yml
 phony=1
 enabled=0
 
+[pkgconfig]
+command=$(OBJDIR)src/aobc-tool generate pkgconfig
+depends=$(OBJDIR)src/aobc-tool,database.yml
+type=command
+enabled=0
+phony=1
+
 [plan.md]
 type=command
-command=$(OBJDIR)src/aobc-tool generate
+command=$(OBJDIR)src/aobc-tool generate plan
 depends=$(OBJDIR)src/aobc-tool,database.yml
 
 [security.md]
 type=command
-command=$(OBJDIR)src/aobc-tool generate
+command=$(OBJDIR)src/aobc-tool generate securityreview
 depends=$(OBJDIR)src/aobc-tool,database.yml
 
 [spdx]
-depends=dependencies.md,security.md,tools/spdx.sh
+depends=tools/spdx.sh,pkgconfig
 type=script
 script=./tools/spdx.sh
 enabled=0
