aobc-tool: generate CODEOWNER files

--- a/project.conf
+++ b/project.conf
@@ -2,7 +2,7 @@ vendor=FreeBSD-Foundation
 package=alpha-omega-beach-cleaning
 version=20250922
 
-targets=dependencies.md,format,merge-versions,pkgconfig,plan.md,security.md,spdx,versions.yml
+targets=CODEOWNERS,dependencies.md,format,merge-versions,pkgconfig,plan.md,security.md,spdx,versions.yml
 subdirs=src
 dist=COPYING,Makefile,README.md,database.yml,tools/spdx.sh
 
@@ -11,6 +11,11 @@ dist=COPYING,Makefile,README.md,database.yml,tools/spdx.sh
 install=$(PREFIX)/share/doc/$(PACKAGE)
 
 #targets
+[CODEOWNERS]
+type=command
+command=$(OBJDIR)src/aobc-tool generate codeowners
+depends=$(OBJDIR)src/aobc-tool,database.yml
+
 [dependencies.md]
 type=command
 command=$(OBJDIR)src/aobc-tool generate dependencies
